Corrigido apontamentos do Sonar, configurado mensagens do bean validation, adicionado criptografia do cartão e arrumado remocao de cartão